--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="js/jquery_ext.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
