--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 				<button id="newgame" type="button">New Game</button>
 				
 			</div>
-			<div id="output-wrapper"><div id="progressbar"><span id="output">Waiting for your guess</span></div></div>
+			<div id="output-wrapper">
+				<div id="progressbar"></div>
+				<span id="output">Waiting for your guess</span>
+			</div>
 		</section>
 		<footer>
 			<span>&copy; 2014 Andela Institute</span>
